k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: mini-ecommerce/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: mini-ecommerce
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
