k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-ecommerce-ingress
  namespace: mini-ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: mini-ecommerce.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
